# ICRA2023_Quadruped_Robot_Challenges

./: .gitignore  CMakeLists.txt  README.md  package.xml
coppelia_sim/: competition_map.ttt  competition_map_in.ttt  competition_map_out.ttt
launch/: competition_world.launch  gazebo_world.launch  isaacgym_world.launch  rviz.launch  test_world.launch
meshes/: 4 Inch Solid Wood Block Cube.stl  Akro_mils.mtl  Akro_mils.stl  New_600x400_2way_Wooden_Pallet.dae  New_600x400_2way_Wooden_Pallet.mtl  New_600x400_2way_Wooden_Pallet.stl  New_EURO_EPAL_Pallet.dae  New_EURO_EPAL_Pallet.mtl  New_EURO_EPAL_Pallet.stl  Nisopa_Kerb_Ramp.mtl  Nisopa_Kerb_Ramp.stl  Plastic_Curb_Ramp.mtl  Plastic_Curb_Ramp.stl  Plastic_Storage_Crate.mtl  Plastic_Storage_Crate.stl  Plywood_16mm_sheet.dae  Plywood_16mm_sheet.mtl  Plywood_16mm_sheet.stl  Plywood_3mm_sheet.dae  Plywood_3mm_sheet.mtl  Plywood_3mm_sheet.stl  Plywood_wall.dae  Plywood_wall.mtl  Plywood_wall.stl  seat_pad.mtl  seat_pad.stl  seat_pad_inner_compound.stl  seat_pad_outer_compound.stl  solid_wood_block.dae  solid_wood_block.mtl  solid_wood_block.stl
meshes/assembly/: 1200x2400_OSB.mtl  2.mtl  3.mtl  4_1.mtl  600x2400_OSB__194145_.mtl  Component_246__131227_.mtl  Component_247__131299_.mtl  Component_248__131260_.mtl  Component_7.mtl  (+34 more)
rviz/: urdf.rviz
scripts/: Blender_to_URDF.py  CoppeliaInterface.py  IsaacGymInterface.py  designer.py  object_list.txt  object_quat.txt
urdf/: innermap.urdf  innermap.urdf.xacro  map.urdf  map.urdf.xacro  outermap.urdf  outermap.urdf.xacro  test.xacro  xacro2urdf.sh
worlds/: competition.world
(+490 files in other folders)
