cmake_minimum_required(VERSION 3.0.2)
project(ICRA2023_Quadruped_Competition)

find_package(catkin REQUIRED)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES ICRA2023_Quadruped_Competition
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

include_directories(
# include
# ${catkin_INCLUDE_DIRS}
)
